--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
       <div class="card">
         <img src="img/burbujero.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
-        <h3>Burbujero $19.000 (x30u)</h3>
+        <h3>Burbujero(x30u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
 
       <div class="card">
         <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-        <h3>Chupetín con polvo acido $13.000 (x30u)</h3>
+        <h3>Chupetín con polvo acido (x30u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
       
       <div class="card">
         <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-        <h3>Celu + chicles $12.900 (x30)</h3>
+        <h3>Celu + chicles (x30)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
 
@@ -67,23 +67,19 @@
 
       <div class="card">
         <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
-        <h3>Nutello $13.000 (x30u)</h3>
+        <h3>Nutello(x30u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
 
       <div class="card">
         <img src="img/merliina.jpg" alt="Chupetin Merlina" onclick="abrirModal(this)">
-        <h3>Chupetín $10.900 (x30u)</h3>
+        <h3>Chupetín (x30u)</h3>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
 
       </div>
     </section>
-
-    <aside class="buscador">
-      <input type="text" id="search" placeholder="🔍 Buscar producto...">
-      <div id="no-results" style="display:none; margin-top: 1rem; color: red;"></div>
-    </aside>
+    
   </main>
 
   <!-- Footer con botones de redes sociales -->
