arreglo de margin-top

--- a/catalogo.html
+++ b/catalogo.html
@@ -18,7 +18,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+    Envíos a todo el país<span class="emoji">📦</span> Golosinas Aries<span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
@@ -36,7 +36,7 @@
       <section class="seccion">
         <div class="contenedor">
          <h2>Precios MAYORISTAS (compra mínima de 12 productos).</h2>
-         <h2>Si comprás mas a 15 productos, menor precio!</h2>
+         <h2>Si comprás mas de 15 productos, menor precio!</h2>
         </div>
 
         <div class="portfolio">
@@ -302,14 +302,6 @@
         </div>
       </section>
       </section>
-
-    <div id="no-results" style="display:none; text-align:center; margin-top:1rem;">
-      <p>
-      No encontramos ese producto 😔  
-      <a href="https://wa.me/5492236010443?text=Hola!%20Busco%20un%20producto%20que%20no%20encuentro%20en%20la%20tienda" 
-      target="_blank">Envianos un WhatsApp 📲 y te lo conseguimos</a>
-      </p>
-    </div>
 
     <!-- Modal -->
     <div id="modal" class="modal">
