arreglo de margin-top

--- a/catalogo.html
+++ b/catalogo.html
@@ -35,10 +35,8 @@
 
       <section class="seccion">
         <div class="contenedor">
-         <h2>Precios MAYORISTAS (compra mínima de 12 productos)
-          Si comprás mas de 15 productos, menor precio!
-         </h2>
-  
+         <h2>Precios MAYORISTAS,compra mínima de 12 productos.</h2>
+         <h2>Si comprás mas de 15 productos, menor precio!</h2>
         </div>
 
         <div class="portfolio">
