Nuevos precios mayoristas

--- a/catalogo.html
+++ b/catalogo.html
@@ -42,83 +42,86 @@
         
           <div class="card">
             <img src="img/ojos.jpg" alt="Ojos" onclick="abrirModal(this)">
-            <h3>Ojos</h3>
-            <p></p>
+            <h3>Gomitas blandas Ojos (30u)</h3>
+            <p>$7.000</p>
           </div>
 
           <div class="card">
             <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
-            <h3>Brains</h3>
-            <p></p>
+            <h3>Gomitas blandas Brains (30u)</h3>
+            <p>$7.000</p>
           </div>
 
           <div class="card">
             <img src="img/chupetinBrain.jpg" alt= "Chupetín Brain" onclick="abrirModal(this)">
-            <h3>Chupetín Brain</h3>
+            <h3>Chupetín con polvo ácido Brain(30u)</h3>
+            <p>$8.400</p>
           </div>
 
           <div class="card">
               <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo ácido" onclick="abrirModal(this)">
-              <h3>Chupetín con polvo ácido</h3>
+              <h3>Chupetín con polvo ácido (30u)</h3>
+              <p>$8.400</p>
           </div>
 
           <div class="card">
               <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
-              <h3>Chupetín Calabaza</h3>
+              <h3>Chupetín Calabaza conpolvo ácido (30u)</h3>
+              <p>$8.400</p>
           </div>
 
           <div class="card">
             <img src="img/calabaza.jpg" alt="calabaza" onclick="abrirModal(this)">
-            <h3>Calabazas</h3>
-            <p>(x30)</p>
+            <h3>Gomitas blandas Calabazas (30u)</h3>
+            <p>$7.000</p>
           </div>
 
           <div class="card">
             <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
-            <h3>Capibaras</h3>
-            <p>(x30)</p>
+            <h3> Gomitas blandas Capibaras (30u)</h3>
+            <p>$7.000</p>
           </div>
 
           <div class="card">
             <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
-            <h3>Selección Argentina</h3>
-            <p>🇦🇷</p>
+            <h3>Gomitas blandas Selección Argentina (30u)</h3>
+            <p>$7.500🇦🇷</p>
           </div>
 
           <div class="card">
             <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
-            <h3>Fantasmita</h3>
-            <p>👻</p>
+            <h3> Fantasmita con chicles y sonido(30u)</h3>
+            <p>$8.500👻</p>
           </div>
 
           <div class="card">
             <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
-            <h3>Fantasmitas</h3>
-            <p>👻</p>
+            <h3> Gomitas blandas Fantasmita (30u)</h3>
+            <p>$7.000👻</p>
           </div>
 
           <div class="card">
             <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
-            <h3>Donas</h3>
-            <p>(x30)</p>
+            <h3>Gomitas blandas Donas (30u)</h3>
+            <p>$7.000</p>
           </div>
 
            <div class="card">
             <img src="img/frutilla.jpg" alt="Frutillas" onclick="abrirModal(this)">
-            <h3>Frutillas</h3>
-            <p>$ (x30)</p>
+            <h3>Gomitas blandas Frutillas (30u)</h3>
+            <p>$7.500</p>
           </div>
 
           <div class="card">
             <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
-            <h3>Nutello</h3>
-            <p>$ (x30)</p>
+            <h3>Nutello (30u)</h3>
+            <p>$8.500</p>
           </div>
 
           <div class="card">
             <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-            <h3>Latitas con chicles</h3>
-            <p>$ (x30)</p>
+            <h3>Latitas con chicles (30u)</h3>
+            <p>$12.500</p>
           </div>
 
            <div class="card">
