--- a/catalogo.html
+++ b/catalogo.html
@@ -126,145 +126,92 @@
 
            <div class="card">
             <img src="img/LATAS.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-            <h3>Latitas con chicles</h3>
-            <p>$ (x30)</p>
+            <h3>Latitas con chicles (x30)</h3>
+            <p>$11.500</p>
           </div>
 
           <div class="card">
             <img src="img/botellas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
-            <h3>Botellitas con chicles</h3>
-            <p>$ (x30)</p>
+            <h3>Botellitas con chicles (30u)</h3>
+            <p>$10.000</p>
           </div>
 
           <div class="card">
             <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
-            <h3>Mechas mágicas</h3>
-            <p>$ (x30)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
-            <h3>Trompetas con chupetines</h3>
-            <p>$ (x60u)</p>
+            <h3>Mechas mágicas (30u)</h3>
+            <p>$9.000</p>
           </div>
 
            <div class="card">
             <img src="img/burbujero.jpg" alt="Burbujero" onclick="abrirModal(this)">
-            <h3>Burbujero</h3>
-            <p>$ (x30)</p>
+            <h3>Burbujeros (24u)</h3>
+            <p>$15.000</p>
 
           </div>
             <div class="card">
             <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
             <h3>Alcancías con gelatinas</h3>
-            <p>$ (x12u) / (x24)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
-            <h3>Gomitas acidas</h3>
-            <p>$ (500g)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
-            <h3>Cubanitos</h3>
-            <p>$ (48 unidades)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
-            <h3>Bombones Surtidos</h3>
-            <p>$ (50 unidades)</p>
-          </div>
-          
-          <div class="card">
-            <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
-            <h3>Gomitas Anillos</h3>
-            <p>$ (700g)</p>
+            <p>$4.500 (CADA UNA)</p>
           </div>
 
           <div class="card">
             <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
-            <h3>Chicle por metro</h3>
-            <p>$</p>
-          </div>
-
-          <div class="card">
-            <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
-            <h3>Gallinitas</h3>
-            <p>$ (25 unidades)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
-            <h3>Gomitas Yummy frutilla con crema</h3>
-            <p>$(500g)</p>
-          </div>
-
-          <div class="card">
-            <img src="img/ojoschicos.jpg" alt="Ojos CHICOS" onclick="abrirModal(this)">
-            <h3>Ojos chiquitos (x200 unidades)</h3>
+            <h3>Chicle por metro (30u)</h3>
+            <p>$7.800</p>
           </div>
 
           <div class="card">
             <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
             <h3>Brochetas de ojos (x30 brochetas)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
-            <h3>Smack bar (12 unidades)</h3>
+            <p>$7.000</p>
           </div>
 
           <div class="card">
             <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
             <h3>Chupetín con polvo acido (x30u)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
-            <h3>Pony spray candy (x30u)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
-            <h3>Gomitas con forma de pancho (x30u)</h3>
+            <p>$9.000</p>
           </div>
 
           <div class="card">
             <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
             <h3>Chupetines con formas (x30)</h3>
+            <p>$8.000</p>
           </div>
 
           <div class="card">
             <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
-            <h3>Coronas LED (x30u)</h3>
+            <h3>Chupetines de Corona con LED (x30u)</h3>
+            <p>$9.000</p>
           </div>
 
           <div class="card">
             <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-            <h3>Celu + chicles (x30)</h3>
+            <h3>Celu + chicles (mas variedad de diseño) (x30)</h3>
+            <p>$8.500</p>
           </div>
 
           <div class="card">
             <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
             <h3>Polvo acido (x30u)</h3>
+            <p>$8.400</p>
           </div>
 
           <div class="card">
             <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
             <h3>Cool Mint sabores frutales (x30u)</h3>
+            <p>$8.800</p>
           </div>
 
           <div class="card">
             <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
             <h3>Chupetines Merlina (x30u)</h3>
+            <p>$9.000</p>
           </div>
 
           <div class="card">
             <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
             <h3>Monedas de chocolate (x250u)</h3>
+            <p>$13.000</p>
           </div>
 
           <div class="card">
@@ -299,6 +246,72 @@
             <h3>Gomitas Bull dog</h3>
             <p>(360g)</p>
           </div>
+
+          <div class="card">
+            <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
+            <h3>Gomitas acidas (500g)</h3>
+            <p>$</p>
+          </div>
+
+          <div class="card">
+            <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+            <h3>Cubanitos (48 unidades)</h3>
+            <p>$</p>
+          </div>
+
+          <div class="card">
+            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
+            <h3>Trompetas con chupetines (x60u)</h3>
+            <p>$</p>
+          </div>
+
+          <div class="card">
+            <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
+            <h3>Bombones Surtidos</h3>
+            <p>$ (50 unidades)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
+            <h3>Gomitas Anillos (700g)</h3>
+            <p>$ </p>
+          </div>
+
+          <div class="card">
+            <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
+            <h3>Gallinitas</h3>
+            <p>$ (25 unidades)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+            <h3>Gomitas Yummy frutilla con crema (500g)</h3>
+            <p>$</p>
+          </div>
+
+          <div class="card">
+            <img src="img/ojoschicos.jpg" alt="Ojos CHICOS" onclick="abrirModal(this)">
+            <h3>Ojos chiquitos (x200 unidades)</h3>
+          </div>
+
+          <div class="card">
+            <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
+            <h3>Smack bar (12 unidades)</h3>
+          </div>
+
+        <div class="card">
+            <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
+            <h3>Pony spray candy (x30u)</h3>
+        </div>
+
+        <div class="card">
+            <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
+            <h3>Gomitas con forma de pancho (x30u)</h3>
+            <p></p>
+        </div>
+
+
+          <!-- FIN CATALOGO -->
 
           </div>
         </div>
