--- a/catalogo.html
+++ b/catalogo.html
@@ -216,29 +216,20 @@
 
           <div class="card">
             <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
-            <h3>Gelatinas (x12u)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
-            <h3>Transformers (x9)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-            <h3>Dispenser con chicles (x8u)</h3>
+            <h3>Gelatinas (100u)</h3>
+            <p>$30.000</p>
           </div>
 
           <div class="card">
             <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
-            <h3>Huevos sorpresa</h3>
-            <p>(x30u)</p>
+            <h3>Huevos con juego de plant vs zombies + chicles y más diseños(x30u)</h3>
+            <p>$10.500</p>
           </div>
 
           <div class="card">
             <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
-            <h3>Bolas Pokémon con sorpresa y caramelo</h3>
-            <p>(x30u)</p>
+            <h3>Bolas Pokémon con sorpresa y chicle (x30u)</h3>
+            <p>$10.500</p>
           </div>
 
           <div class="card">
@@ -299,17 +290,26 @@
             <h3>Smack bar (12 unidades)</h3>
           </div>
 
-        <div class="card">
+          <div class="card">
             <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
             <h3>Pony spray candy (x30u)</h3>
-        </div>
+          </div>
 
-        <div class="card">
+          <div class="card">
             <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
             <h3>Gomitas con forma de pancho (x30u)</h3>
             <p></p>
-        </div>
+          </div>
 
+          <div class="card">
+            <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
+            <h3>Transformers (x9)</h3>
+          </div>
+
+          <div class="card">
+            <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
+            <h3>Dispenser con chicles (x8u)</h3>
+          </div>
 
           <!-- FIN CATALOGO -->
 
