--- a/catalogo.html
+++ b/catalogo.html
@@ -33,8 +33,8 @@
 
   <main>
 
-      <section class="seccion">
-        <div class="contenedor">
+      <section class="destacados">
+        <div class="hero">
           <h2>Precios MAYORISTAS,compra mínima de 12 productos.</h2>
         </div>
 
@@ -326,6 +326,7 @@
         <p id="modal-title"></p>
       </div>
     </div>
+
   </main>
 
 <footer>
@@ -349,10 +350,7 @@
       </div>
     </div>
 
-   
 </footer>
-
-  
 
 <!-- Botón flotante de WhatsApp -->
 <a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
