--- a/contacto.html
+++ b/contacto.html
@@ -32,9 +32,10 @@
 
   <!-- Contacto -->
   <main>
+    
     <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
+      <p class="hero"> Podés contactarnos a través de:</p>
     </aside>
-      <p class="hero-buttons"> Podés contactarnos a través de:</p>
       <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
