--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
+      <input type="text" id="search" placeholder="🔍 Buscar producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
+      <p id="no-results" style="display:none; text-align:center; color:#fff; margin-top:1rem;"></p>
     </nav>
   </div>
 </header>
@@ -32,13 +34,13 @@
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
     <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
-    <p>Golosinas, juguetes y combos personalizados.</p>
   </aside>
 
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
       <h2>Productos en Promoción</h2>
+      
       <div class="portfolio">
 
       <div class="card">
