--- a/catalogo.html
+++ b/catalogo.html
@@ -330,7 +330,6 @@
   </main>
 
 <footer>
-   <h3>Consultar por combos personalizados.</h3>
     <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
@@ -349,6 +348,8 @@
         <a href="#" class="back-to-top">⬆ Volver arriba</a>
       </div>
     </div>
+    
+ <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
 
 </footer>
 
@@ -359,7 +360,7 @@
        style="width:65px; height:65px; position:fixed; bottom:20px; right:20px; z-index:1000;">
 </a>
 
-<script src="js/catalogo.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
