--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es-AR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,27 @@
   <!-- Font Awesome para iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
 <!-- Header -->
 <header>
+
   <aside class="logo-contenedor">
     <img src="img/logo.jpg" alt="Logo Golosinas Aries">
   </aside>
+
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
       Envíos a todo el país <span class="emoji">📦</span>  Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
+
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
+
   </div>
 </header>
 
@@ -36,8 +42,8 @@
     <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
       <p class="hero"> Podés contactarnos a través de:</p>
     </aside>
+
       <!-- Botones sociales -->
-    <div class="social-buttons-wrapper">
       <div class="social-buttons">
         <a href="https://mail.google.com/mail/?view=cm&to=golosinasaries@gmail.com" class="social-btn email">
           <i class="fas fa-envelope"></i> Email
@@ -52,19 +58,11 @@
           <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
       </div>
-    </div>
    
-      <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
-      <p class="hero-buttons"> Si tenés alguna pregunta, no dudes en contactarnos.</p>
+    <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
     
-  </main>
+</main>
 
-  
-  <footer>
-
-    <p class="hero-buttons"> </span>Golosinas Aries <span class="emoji">♈🔥</span></p>
-
-  </footer>
 
   <!-- Botón flotante de WhatsApp -->
   <a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
@@ -72,7 +70,13 @@
         alt="WhatsApp" 
         style="width:65px; height:65px; position:fixed; bottom:20px; right:20px; z-index:1000;">
   </a>
-  
+
+<footer>
+
+  <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
+
+</footer>
+
 <script src="js/script.js"></script>
 
 </body>
