--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
 
   <!-- Footer con botones de redes sociales -->
 <footer>
- <p> Si tenés alguna pregunta, no dudes en contactarnos.</p>
     <!-- Botones sociales -->
-    <div class="social-buttons-wrapper">
       <div class="social-buttons">
         <a href="https://mail.google.com/mail/?view=cm&to=golosinasaries@gmail.com" class="social-btn email">
           <i class="fas fa-envelope"></i> Email
@@ -110,7 +108,9 @@
         </a>
         <a href="#" class="back-to-top">⬆ Volver arriba</a>
       </div>
-    </div>
+
+    <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
+
 </footer>
 
 
