--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,9 @@
         </a>
       </div>
    
-    <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
+    
+    <h2 class="hero">Envíos a todo el país <span class="emoji">📦</span></h2>
+   
     
 </main>
 
