Agrego productos l catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -55,6 +55,126 @@
           </div>
 
           <div class="card">
+            <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+            <h3> Fantasmita con chicles y sonido(30u)</h3>
+            <p>$8.500👻</p>
+          </div>
+
+          <div class="card">
+            <img src="img/nutello1.jpg" alt="Nutello" onclick="abrirModal(this)">
+            <h3>Nutello (30u)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/latas1.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+            <h3>Latitas con chicles (30u)</h3>
+            <p>$12.500</p>
+          </div>
+
+           <div class="card">
+            <img src="img/LATAS.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+            <h3>Latitas con chicles (x30)</h3>
+            <p>$11.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/botellitas1.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
+            <h3>Botellitas con chicles (30u)</h3>
+            <p>$10.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
+            <h3>Mechas mágicas (30u)</h3>
+            <p>$9.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/burbujero3.jpg" alt="Burbujero" onclick="abrirModal(this)">
+            <h3>Burbujeros (24u)</h3>
+            <p>$15.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/beisball1.jpg" alt="beisball" onclick="abrirModal(this)">
+            <h3>Béisbol(30u)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/carrera.jpg" alt="Autos de carrera con chicles" onclick="abrirModal(this)">
+            <h3>Autos de carrera con chicles(30u)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/cars2.jpg" alt="cars" onclick="abrirModal(this)">
+            <h3>Cars(30u)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
+            <h3> Gomitas blandas Fantasmita (30u)</h3>
+            <p>$7.000👻</p>
+          </div>
+
+          <div class="card">
+            <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas Donas (30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas3.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas4.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas5.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas1.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas2.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas7.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitasblandas9.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas(30u)</h3>
+            <p>$7.000</p>
+          </div>
+
+           <div class="card">
+            <img src="img/frutilla.jpg" alt="Frutillas" onclick="abrirModal(this)">
+            <h3>Gomitas blandas Frutillas (30u)</h3>
+            <p>$7.500</p>
+          </div>
+
+          <div class="card">
             <img src="img/chupetinBrain.jpg" alt= "Chupetín Brain" onclick="abrirModal(this)">
             <h3>Chupetín con polvo ácido Brain(30u)</h3>
             <p>$8.400</p>
@@ -91,79 +211,25 @@
           </div>
 
           <div class="card">
-            <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
-            <h3> Fantasmita con chicles y sonido(30u)</h3>
-            <p>$8.500👻</p>
-          </div>
-
-          <div class="card">
-            <img src="img/fantasmitas.jpg" alt="Fantasmitas" onclick="abrirModal(this)">
-            <h3> Gomitas blandas Fantasmita (30u)</h3>
-            <p>$7.000👻</p>
-          </div>
-
-          <div class="card">
-            <img src="img/donas.jpg" alt="Donas" onclick="abrirModal(this)">
-            <h3>Gomitas blandas Donas (30u)</h3>
-            <p>$7.000</p>
-          </div>
-
-           <div class="card">
-            <img src="img/frutilla.jpg" alt="Frutillas" onclick="abrirModal(this)">
-            <h3>Gomitas blandas Frutillas (30u)</h3>
-            <p>$7.500</p>
-          </div>
-
-          <div class="card">
-            <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
-            <h3>Nutello (30u)</h3>
-            <p>$8.500</p>
-          </div>
-
-          <div class="card">
-            <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-            <h3>Latitas con chicles (30u)</h3>
-            <p>$12.500</p>
-          </div>
-
-           <div class="card">
-            <img src="img/LATAS.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-            <h3>Latitas con chicles (x30)</h3>
-            <p>$11.500</p>
-          </div>
-
-          <div class="card">
-            <img src="img/botellas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
-            <h3>Botellitas con chicles (30u)</h3>
-            <p>$10.000</p>
-          </div>
-
-          <div class="card">
-            <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
-            <h3>Mechas mágicas (30u)</h3>
-            <p>$9.000</p>
-          </div>
-
-           <div class="card">
-            <img src="img/burbujero.jpg" alt="Burbujero" onclick="abrirModal(this)">
-            <h3>Burbujeros (24u)</h3>
-            <p>$15.000</p>
-
-          </div>
-            <div class="card">
             <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
             <h3>Alcancías con gelatinas</h3>
             <p>$4.500 (CADA UNA)</p>
           </div>
 
           <div class="card">
-            <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
+            <img src="img/chiclepormetro1.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
+            <h3>Chicle por metro (30u)</h3>
+            <p>$7.800</p>
+          </div>
+
+           <div class="card">
+            <img src="img/chiclepormetro2.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
             <h3>Chicle por metro (30u)</h3>
             <p>$7.800</p>
           </div>
 
           <div class="card">
-            <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
+            <img src="img/brochetas3.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
             <h3>Brochetas de ojos (x30 brochetas)</h3>
             <p>$7.000</p>
           </div>
@@ -175,7 +241,7 @@
           </div>
 
           <div class="card">
-            <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
+            <img src="img/chupetinesconforma1.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
             <h3>Chupetines con formas (x30)</h3>
             <p>$8.000</p>
           </div>
@@ -185,10 +251,21 @@
             <h3>Chupetines de Corona con LED (x30u)</h3>
             <p>$9.000</p>
           </div>
+           <div class="card">
+            <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
+            <h3>Pimball + chicles(x30)</h3>
+            <p>$8.500</p>
+          </div>
 
           <div class="card">
-            <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-            <h3>Celu + chicles (mas variedad de diseño) (x30)</h3>
+            <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
+            <h3>Remera pimball + chicles(x30)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/pimballip.jpg" alt="chicles" onclick="abrirModal(this)">
+            <h3>Celu + chicles(x30)</h3>
             <p>$8.500</p>
           </div>
 
@@ -199,7 +276,7 @@
           </div>
 
           <div class="card">
-            <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
+            <img src="img/mentitas1.jpg" alt="Cool Mint" onclick="abrirModal(this)">
             <h3>Cool Mint sabores frutales (x30u)</h3>
             <p>$8.800</p>
           </div>
@@ -223,14 +300,20 @@
           </div>
 
           <div class="card">
-            <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
-            <h3>Huevos con juego de plant vs zombies + chicles y más diseños(x30u)</h3>
-            <p>$10.500</p>
+            <img src="img/gomitapancho.jpg" alt="Gomitas" onclick="abrirModal(this)">
+            <h3>Gomitas con forma de pancho (x30u)</h3>
+            <p>$8.500</p>
           </div>
 
           <div class="card">
-            <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
-            <h3>Gomitas con forma de pancho (x30u)</h3>
+            <img src="img/gomitahelado.jpg" alt="Gomitas" onclick="abrirModal(this)">
+            <h3>Gomitas con forma de heldo (x30u)</h3>
+            <p>$8.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gomitapizza.jpg" alt="Gomitas" onclick="abrirModal(this)">
+            <h3>Gomitas con forma de pizza (x30u)</h3>
             <p>$8.500</p>
           </div>
 
@@ -238,6 +321,35 @@
             <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
             <h3>Bolas Pokémon con sorpresa y chicle (x30u)</h3>
             <p>$10.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/sorpresaplant.jpg" alt="Bolas" onclick="abrirModal(this)">
+            <h3>Sorpresa plantas vs Zombies y chicles (x30u)</h3>
+            <p>$10.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/sorpresacapi.jpg" alt="Bolas" onclick="abrirModal(this)">
+            <h3>Sorpresa capibara y chicles (x30u)</h3>
+            <p>$10.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/sorpresa22.jpg" alt="Bolas" onclick="abrirModal(this)">
+            <h3>Sorpresa chicles (x30u)</h3>
+            <p>$10.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/sorpresa2.jpg" alt="Bolas" onclick="abrirModal(this)">
+            <h3>Sorpresa chicles (x30u)</h3>
+            <p>$10.500</p>
+          </div>
+
+          <div class="card">
+            <img src="img/trompeta1.jpg" alt="Trompetas con chupetin y sonido" onclick="abrirModal(this)">
+            <h3>Trompetas con chupetin y sonido</h3>
           </div>
 
           <div class="card">
@@ -255,12 +367,6 @@
           <div class="card">
             <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
             <h3>Cubanitos (48 unidades)</h3>
-            <p>$</p>
-          </div>
-
-          <div class="card">
-            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
-            <h3>Trompetas con chupetines (x60u)</h3>
             <p>$</p>
           </div>
 
@@ -312,6 +418,12 @@
             <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
             <h3>Dispenser con chicles (x8u)</h3>
           </div>
+
+          <div class="card">
+            <img src="img/trak.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
+            <h3>Dispenser con chicles (x8u)</h3>
+          </div>
+
 
           <!-- FIN CATALOGO -->
 
