--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="portfolio">
 
       <div class="card">
-        <img src="img/burbujero.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
+        <img src="img/burbujero3.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
         <h3>Burbujero(x30u)</h3>
         <p>$15.000</p>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
