Agrego productos l catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -247,7 +247,7 @@
           </div>
 
           <div class="card">
-            <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
+            <img src="img/chupetincoronled.jpg" alt="Coronas LED" onclick="abrirModal(this)">
             <h3>Chupetines de Corona con LED (x30u)</h3>
             <p>$9.000</p>
           </div>
