Agrego productos l catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -24,7 +24,7 @@
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
-      <input type="text" id="search" placeholder="🔍 Buscar producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
+      <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
       <p id="no-results" style="display:none; text-align:center; color:#fff; margin-top:1rem;"></p>
     </nav>
   </div>
