--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,10 @@
       </div>
    
     
-    <h2 class="hero">Envíos a todo el país <span class="emoji">📦</span></h2>
+    <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
+    <div class="hero-overlay"></div>
+    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido 💌 — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
+  </aside>
    
     
 </main>
