--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
+    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido 💌 — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
   </aside>
 
   <main>
