--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
     
     <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido 💌 — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
+    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
   </aside>
    
     
