--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-    Envíos a todo el país - Golosinas Aries <span class="emoji">♈🔥</span>
+    Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
@@ -33,7 +33,7 @@
   <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido 💌 — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
+    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu pedido — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
   </aside>
 
   <main>
