--- a/catalogo.html
+++ b/catalogo.html
@@ -349,54 +349,44 @@
 
           <div class="card">
             <img src="img/trompeta1.jpg" alt="Trompetas con chupetin y sonido" onclick="abrirModal(this)">
-            <h3>Trompetas con chupetin y sonido</h3>
+            <h3>Trompetas con chupetin y sonido (30u)</h3>
+            <p>$8.000</p>
           </div>
 
           <div class="card">
             <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
-            <h3>Gomitas Bull dog</h3>
-            <p>(360g)</p>
+            <h3>Gomitas Bull dog (360g)</h3>
+            <p>$6.000</p>
           </div>
 
           <div class="card">
             <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
             <h3>Gomitas acidas (500g)</h3>
-            <p>$</p>
-          </div>
-
-          <div class="card">
-            <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
-            <h3>Cubanitos (48 unidades)</h3>
-            <p>$</p>
+            <p>$6.500</p>
           </div>
 
           <div class="card">
             <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
-            <h3>Bombones Surtidos</h3>
-            <p>$ (50 unidades)</p>
+            <h3>Bombones Surtidos (50 unidades)</h3>
+            <p>$8.400</p>
           </div>
 
           <div class="card">
             <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
             <h3>Gomitas Anillos (700g)</h3>
-            <p>$ </p>
-          </div>
-
-          <div class="card">
-            <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
-            <h3>Gallinitas</h3>
-            <p>$ (25 unidades)</p>
+            <p>$6.500</p>
           </div>
 
           <div class="card">
             <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
             <h3>Gomitas Yummy frutilla con crema (500g)</h3>
-            <p>$</p>
+            <p>$6.500</p>
           </div>
 
           <div class="card">
             <img src="img/ojoschicos.jpg" alt="Ojos CHICOS" onclick="abrirModal(this)">
             <h3>Ojos chiquitos (x200 unidades)</h3>
+            <p>sin stock</p>
           </div>
 
           <div class="card">
@@ -405,23 +395,15 @@
           </div>
 
           <div class="card">
-            <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
-            <h3>Pony spray candy (x30u)</h3>
-          </div>
-
-          <div class="card">
-            <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
-            <h3>Transformers (x9)</h3>
-          </div>
-
-          <div class="card">
             <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-            <h3>Dispenser con chicles (x8u)</h3>
+            <h3>Dispenser con chicles</h3>
+            <p>$5.000</p>
           </div>
 
           <div class="card">
             <img src="img/trak.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-            <h3>Dispenser con chicles (x8u)</h3>
+            <h3>Dispenser con chicles</h3>
+            <p>$5.000</p>
           </div>
 
 
