agrande texto de modal, y mas productos

--- a/catalogo.html
+++ b/catalogo.html
@@ -46,6 +46,13 @@
             <img src="img/ojos.jpg" alt="Ojos" onclick="abrirModal(this)">
             <h3>Gomitas blandas Ojos (30u)</h3>
             <p>$7.000</p>
+            <p>(Hacé click para ver más fotos 👀)</p>
+          </div>
+
+           <div class="card">
+            <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
+            <h3>🎃 Halloween chupetines (30u)</h3>
+            <p>$7.800</p>
           </div>
 
           <div class="card">
